Alpha1 release kontalk.org website
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/protocol.html
+++ b/protocol.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>The Kontalk Messaging Project</title>
+<title>Protocol | The Kontalk Messaging Project</title>
 <meta name="description" content="A new way of communicating."/>
 <meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;"/>
@@ -14,18 +14,21 @@
 
 <div style="margin-left: auto; margin-right: auto; text-align: center">
 
-<img src="icon.png" alt="Kontalk"/>
-<h1>The Kontalk Messaging Project</h1>
-<h3>A new way of communicating.</h3>
-<h5>Available now on the <a href="https://market.android.com/details?id=org.kontalk">Android Market</a>.</h5>
+<a href="index.html"><img src="icon_small.png" alt="Kontalk"/></a>
+<h3 style="margin: 5px">The Kontalk Messaging Project</h3>
+<h5 style="margin: 5px">A new way of communicating.</h5>
 
-<div style="margin-bottom: 10px">
-<img src="qr-market.png" alt="Kontalk"/>
+<div class="content">
+<!-- content [ -->
+
+Coming soon...
+
+<!-- ] content -->
 </div>
 
 <a href="about.html">About</a>
 |
-<a href="protocol.html">Protocol specifications</a>
+Protocol specifications
 |
 <a href="faq.html">FAQ</a>
 
