--- a/about.html
+++ b/about.html
@@ -85,6 +85,8 @@ the network it can become a trusted server and get more privileges.
 
 About
 |
+<a href="files">Downloads</a>
+|
 <a href="protocol.html">Protocol specifications</a>
 |
 <a href="faq.html">FAQ</a>
