--- a/faq.html
+++ b/faq.html
@@ -77,6 +77,8 @@ phone numbers found in your contacts
 
 <a href="about.html">About</a>
 |
+<a href="files">Downloads</a>
+|
 <a href="protocol.html">Protocol specifications</a>
 |
 FAQ
