--- a/protocol.html
+++ b/protocol.html
@@ -28,6 +28,8 @@ Coming soon...
 
 <a href="about.html">About</a>
 |
+<a href="files">Downloads</a>
+|
 Protocol specifications
 |
 <a href="faq.html">FAQ</a>
