--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 <h3>A new way of communicating.</h3>
 <h5>Available now on the <a href="https://market.android.com/details?id=org.kontalk">Android Market</a>.</h5>
 
-<div style="margin-bottom: 10px">
+<div style="margin-bottom: 20px">
 <img src="qr-market.png" alt="Kontalk"/>
 </div>
 
 <a href="about.html">About</a>
+|
+<a href="files">Downloads</a>
 |
 <a href="protocol.html">Protocol specifications</a>
 |
