--- a/protocol.html
+++ b/protocol.html
@@ -8,6 +8,20 @@
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;"/>
 <link rel="shortcut icon" href="favicon.ico"/>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27252726-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body>
