Switch to Google Play Store
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <img src="icon.png" alt="Kontalk"/>
 <h1>The Kontalk Messaging Project</h1>
 <h3>A new way of communicating.</h3>
-<h5>Available now on the <a href="https://market.android.com/details?id=org.kontalk">Android Market</a>.</h5>
+<h5>Available now on <a href="https://play.google.com/store/apps/details?id=org.kontalk">Google Play Store</a>.</h5>
 
 <div style="margin-bottom: 20px">
 <img src="qr-market.png" alt="Kontalk"/>
