Link to kontalk.net
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/about.html
+++ b/about.html
@@ -103,6 +103,8 @@ About
 |
 <a href="protocol.html">Protocol specifications</a>
 |
+<a href="http://www.kontalk.net/">Kontalk network</a>
+|
 <a href="faq.html">FAQ</a>
 
 </div>
