--- a/faq.html
+++ b/faq.html
@@ -95,6 +95,8 @@ phone numbers found in your contacts
 |
 <a href="protocol.html">Protocol specifications</a>
 |
+<a href="http://www.kontalk.net/">Kontalk network</a>
+|
 FAQ
 
 </div>
