--- a/protocol.html
+++ b/protocol.html
@@ -46,6 +46,8 @@ Coming soon...
 |
 Protocol specifications
 |
+<a href="http://www.kontalk.net/">Kontalk network</a>
+|
 <a href="faq.html">FAQ</a>
 
 </div>
