--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 |
 <a href="protocol.html">Protocol specifications</a>
 |
+<a href="http://www.kontalk.net/">Kontalk network</a>
+|
 <a href="faq.html">FAQ</a>
 
 </div>
