Porting kontalk.org to Bootstrap
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;"/>
 <link rel="shortcut icon" href="favicon.ico"/>
-<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+<!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="screen"/>-->
 
 <script type="text/javascript">
 
@@ -26,28 +29,41 @@
 
 <body>
 
-<div style="margin-left: auto; margin-right: auto; text-align: center">
+<div class="container-fluid">
 
-<img src="icon.png" alt="Kontalk"/>
-<h1>The Kontalk Messaging Project</h1>
-<h3>A new way of communicating.</h3>
-<h5>Available now on <a href="https://play.google.com/store/apps/details?id=org.kontalk">Google Play Store</a>.</h5>
+    <div class="row-fluid pagination-centered">
 
-<div style="margin-bottom: 20px">
-<img src="qr-market.png" alt="Kontalk"/>
-</div>
+        <div class="page-header">
+            <img src="img/icon.png" alt="Kontalk"/>
+            <h1>The Kontalk Messaging Project</h1>
+            <h3>A new way of communicating.</h3>
+            <h5>Available now on <a href="https://play.google.com/store/apps/details?id=org.kontalk">Google Play Store</a>.</h5>
+        </div>
 
-<a href="about.html">About</a>
-|
-<a href="files">Downloads</a>
-|
-<a href="protocol.html">Protocol specifications</a>
-|
-<a href="http://www.kontalk.net/">Kontalk network</a>
-|
-<a href="faq.html">FAQ</a>
+        <div class="box-medium">
+            <img src="img/qr-market.png" alt="Kontalk"/>
+        </div>
+
+    </div>
 
 </div>
+
+<div class="page-footer">
+    <div class="container-fluid pagination-centered">
+
+        <a href="about.html">About</a>
+        |
+        <a href="files">Downloads</a>
+        |
+        <a href="protocol.html">Protocol specifications</a>
+        |
+        <a href="http://www.kontalk.net/">Kontalk network</a>
+        |
+        <a href="faq.html">FAQ</a>
+
+    </div>
+</div>
+
 
 </body>
 </html>
