--- a/protocol.html
+++ b/protocol.html
@@ -7,7 +7,10 @@
 <meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;"/>
 <link rel="shortcut icon" href="favicon.ico"/>
-<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+<!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="screen"/>-->
 
 <script type="text/javascript">
 
@@ -26,30 +29,37 @@
 
 <body>
 
-<div style="margin-left: auto; margin-right: auto; text-align: center">
+<div class="container-fluid">
 
-<a href="index.html"><img src="icon_small.png" alt="Kontalk"/></a>
-<h3 style="margin: 5px">The Kontalk Messaging Project</h3>
-<h5 style="margin: 5px">A new way of communicating.</h5>
+    <div class="row-fluid pagination-centered">
 
-<div class="content">
-<!-- content [ -->
+        <div class="page-header">
+            <a href="index.html"><img src="img/icon_small.png" alt="Kontalk"/></a>
+            <h3>The Kontalk Messaging Project</h3>
+            <h5>A new way of communicating.</h5>
 
-Coming soon...
+        </div>
 
-<!-- ] content -->
+        <h1>Coming soon...</h1>
+
+    </div>
+
 </div>
 
-<a href="about.html">About</a>
-|
-<a href="files">Downloads</a>
-|
-Protocol specifications
-|
-<a href="http://www.kontalk.net/">Kontalk network</a>
-|
-<a href="faq.html">FAQ</a>
+<div class="page-footer">
+    <div class="container-fluid pagination-centered">
 
+        <a href="about.html">About</a>
+        |
+        <a href="files">Downloads</a>
+        |
+        Protocol specifications
+        |
+        <a href="http://www.kontalk.net/">Kontalk network</a>
+        |
+        <a href="faq.html">FAQ</a>
+
+    </div>
 </div>
 
 </body>
