--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
 <meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;"/>
 <link rel="shortcut icon" href="favicon.ico"/>
-<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+<!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="screen"/>-->
 
 <script type="text/javascript">
 
@@ -26,87 +29,86 @@
 
 <body>
 
-<div style="margin-left: auto; margin-right: auto; text-align: center">
+<div class="container-fluid">
 
-<a href="index.html"><img src="icon_small.png" alt="Kontalk"/></a>
-<h3 style="margin: 5px">The Kontalk Messaging Project</h3>
-<h5 style="margin: 5px">A new way of communicating.</h5>
+    <div class="row-fluid pagination-centered">
 
-<div class="content">
-<!-- content [ -->
+        <div class="page-header">
+            <a href="index.html"><img src="img/icon_small.png" alt="Kontalk"/></a>
+            <h3>The Kontalk Messaging Project</h3>
+            <h5>A new way of communicating.</h5>
 
-<div class="diver">
-<div class="title">What is it</div>
-<div class="text">
-<i>Kontalk</i> is an effort to write an instant messaging system &ndash; primarly
-designed for embedded devices, especially smartphones.<br/>
-It would be cross-platform, though there is only an Android client for now.
-iOS, Symbian and even a desktop client will be coming soon.
-</div>
-</div>
+        </div>
 
-<div class="diver">
-<div class="title">The network</div>
-<div class="text">
-<b><i>Kontalk</i> is not owned by anyone</b>. The network is run by the
-community for the community, in a network of servers that can expand virtually
-to infinity.<br/>
-We believe communication is a human right; therefore, anyone on the planet
-should be able to connect freely and for free. <i>Kontalk</i> is designed to be
-free and to remain as such <b><u>forever</u></b>.
-</div>
-</div>
+        <div class="box-medium">
 
-<div class="diver">
-<div class="title">Distributed network</div>
-<div class="text">
-The <i>Kontalk</i> network can continue running even if just one of the servers is up.
-The network itself is designed to not allow any single point of failure and it
-protects itself from broken servers.
-</div>
-</div>
+            <div class="info-box">
+                <span class="info-box-label">What is it</span>
+                <i>Kontalk</i> is an effort to write an instant messaging system &ndash; primarly
+                designed for embedded devices, especially smartphones.<br/>
+                It would be cross-platform, though there is only an Android client for now.
+                iOS, Symbian and even a desktop client will be coming soon.
+            </div>
 
-<div class="diver">
-<div class="title">Security</div>
-<div class="text">
-All data exchanged inside the <i>Kontalk</i> network is <b>encrypted</b>, and
-user IDs are always hashed, so that even the server owners cannot retrieve the
-phone number of a user.
-</div>
-</div>
+            <div class="info-box">
+                <span class="info-box-label">The network</span>
+                <b><i>Kontalk</i> is not owned by anyone</b>. The network is run by the
+                community for the community, in a network of servers that can expand virtually
+                to infinity.<br/>
+                We believe communication is a human right; therefore, anyone on the planet
+                should be able to connect freely and for free. <i>Kontalk</i> is designed to be
+                free and to remain as such <b><u>forever</u></b>.
+            </div>
 
-<div class="diver">
-<div class="title">Lightweight protocol</div>
-<div class="text">
-<i>Kontalk</i> protocol has been designed from scratch to be very lightweight
-and to consume very low network traffic in client-to-server communication. All
-the specifications are available at <a href="protocol.html">this page</a>.
-</div>
-</div>
+            <div class="info-box">
+                <span class="info-box-label">Distributed network</span>
+                The <i>Kontalk</i> network can continue running even if just one of the servers is up.
+                The network itself is designed to not allow any single point of failure and it
+                protects itself from broken servers.
+            </div>
 
-<div class="diver">
-<div class="title">Web of Trust</div>
-<div class="text">
-The <i>Kontalk</i> network of servers is public: anyone can join with their own
-server. A server is untrusted at the beginning; by means of a vote system
-&ndash; based on strong asymmetric encryption &ndash; and by working actively in
-the network it can become a trusted server and get more privileges.
-</div>
+            <div class="info-box">
+                <span class="info-box-label">Security</span>
+                All data exchanged inside the <i>Kontalk</i> network is <b>encrypted</b>, and
+                user IDs are always hashed, so that even the server owners cannot retrieve the
+                phone number of a user.
+            </div>
+
+            <div class="info-box">
+                <span class="info-box-label">Lightweight protocol</span>
+                <i>Kontalk</i> protocol has been designed from scratch to be very lightweight
+                and to consume very low network traffic in client-to-server communication. All
+                the specifications are available at <a href="protocol.html">this page</a>.
+            </div>
+
+            <div class="info-box">
+                <span class="info-box-label">Web of Trust</span>
+                The <i>Kontalk</i> network of servers is public: anyone can join with their own
+                server. A server is untrusted at the beginning; by means of a vote system
+                &ndash; based on strong asymmetric encryption &ndash; and by working actively in
+                the network it can become a trusted server and get more privileges.
+            </div>
+
+        </div>
+
+    </div>
+
 </div>
 
-<!-- ] content -->
-</div>
+<div class="page-footer">
+    <div class="container-fluid pagination-centered">
 
-About
-|
-<a href="files">Downloads</a>
-|
-<a href="protocol.html">Protocol specifications</a>
-|
-<a href="http://www.kontalk.net/">Kontalk network</a>
-|
-<a href="faq.html">FAQ</a>
+        About
+        |
+        <a href="files">Downloads</a>
+        |
+        <a href="protocol.html">Protocol specifications</a>
+        |
+        <a href="http://www.kontalk.net/">Kontalk network</a>
+        |
+        <a href="faq.html">FAQ</a>
 
+    </div>
 </div>
 
 </body>
