--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,10 @@
 <meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;"/>
 <link rel="shortcut icon" href="favicon.ico"/>
-<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
+<!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="screen"/>-->
 
 <script type="text/javascript">
 
@@ -26,79 +29,81 @@
 
 <body>
 
-<div style="margin-left: auto; margin-right: auto; text-align: center">
+<div class="container-fluid">
 
-<a href="index.html"><img src="icon_small.png" alt="Kontalk"/></a>
-<h3 style="margin: 5px">The Kontalk Messaging Project</h3>
-<h5 style="margin: 5px">A new way of communicating.</h5>
+    <div class="row-fluid pagination-centered">
 
-<div class="content">
-<!-- content [ -->
+        <div class="page-header">
+            <a href="index.html"><img src="img/icon_small.png" alt="Kontalk"/></a>
+            <h3>The Kontalk Messaging Project</h3>
+            <h5>A new way of communicating.</h5>
 
-<div class="diver">
-<div class="title">What platform are supported?</div>
-<div class="text">
-Right now we have only an <i>Android</i> client. A cross-platform desktop client
-is being developed and will be released soon; next would be <i>iOS</i> and
-<i>Symbian</i> platforms.<br/>
-The <i>Kontalk</i> protocol is free and open source, if you are a developer you
-are free to write your own client!
-</div>
-</div>
+        </div>
 
-<div class="diver">
-<div class="title">Is the service free?</div>
-<div class="text">
-YES! And always will be. The service is driven by a community of volunteers
-(just like us, the founders of Kontalk) running their own cheap servers &ndash;
-which is fine by the way: the protocol is quite simple and requires few server
-resources.
-</div>
-</div>
+        <div class="box-medium">
 
-<div class="diver">
-<div class="title">Are the clients free too?</div>
-<div class="text">
-Yes, the clients we (the Kontalk team) develop are completely free. Although,
-others could implement their own client and sell it &ndash; yes they can :-)
-</div>
-</div>
+            <div class="info-box">
+                <span class="info-box-label">What platforms are supported?</span>
+                Right now we have only an <i>Android</i> client. A web-based client
+                is being developed and will be hopefully released soon; next would be
+                <i>iOS</i> and <i>Symbian</i> platforms.<br/>
+                The <i>Kontalk</i> protocol is free and open source, if you are a developer you
+                are free to write your own client!
+            </div>
 
-<div class="diver">
-<div class="title">Why I need my phone number to register?</div>
-<div class="text">
-Technically the Kontalk protocol supports any type of login name, but we prefer
-using phone numbers for two reasons:
+            <div class="info-box">
+                <span class="info-box-label">Is the service for free?</span>
+                <strong>YES!</strong> And always will be. The service is driven by a community
+                of volunteers (just like us, the founders of Kontalk) running their own cheap
+                servers &ndash; which is fine by the way: the protocol is quite simple and
+                requires few server resources.
+            </div>
 
-<ul>
-<li>
-we trust users who have a real phone number, keeping spammers and bad guys
-out of the network
-</li>
-<li>
-it helps keeping track of the Kontalk contacts list - it will contain just the
-contacts who actually have Kontalk installed; this is actually verified using
-phone numbers found in your contacts
-</li>
-</ul>
+            <div class="info-box">
+                <span class="info-box-label">Are the clients for free too?</span>
+                Yes, the clients we (the Kontalk team) develop are completely free.
+                However, there could be a price for the iOS client because of the costs of the App Store.
+                Besides, anyone could implement his/her own client and sell it &ndash; yes they can :-)
+            </div>
 
-</div>
-</div>
+            <div class="info-box">
+                <span class="info-box-label">Why I need my phone number to register?</span>
+                Technically the Kontalk protocol supports any type of login name, but we prefer
+                using phone numbers for two reasons:
 
+                <ul>
+                <li>
+                we trust users having a real phone number, keeping spammers and bad guys
+                out of the network
+                </li>
+                <li>
+                it helps keeping track of your Kontalk contacts list &ndash; it will contain just the
+                contacts who actually have Kontalk installed (this is actually verified using
+                phone numbers found in your contacts)
+                </li>
+                </ul>
+            </div>
 
-<!-- ] content -->
+        </div>
+
+    </div>
+
 </div>
 
-<a href="about.html">About</a>
-|
-<a href="files">Downloads</a>
-|
-<a href="protocol.html">Protocol specifications</a>
-|
-<a href="http://www.kontalk.net/">Kontalk network</a>
-|
-FAQ
+<div class="page-footer">
+    <div class="container-fluid pagination-centered">
 
+        <a href="about.html">About</a>
+        |
+        <a href="files">Downloads</a>
+        |
+        <a href="protocol.html">Protocol specifications</a>
+        |
+        <a href="http://www.kontalk.net/">Kontalk network</a>
+        |
+        FAQ
+
+    </div>
 </div>
 
 </body>
