Some info about XMPP
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <img src="img/qr-market.png" alt="Kontalk"/>
         </div>
 
+        <div class="box-medium box-medium-next">
+        <a href="xmpp.html"><img src="img/xmpp.png" alt="XMPP"/><br/><b>Coming soon</b></a>
+        </div>
+
     </div>
 
 </div>
