Moving pages to Google Code Wiki
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="box-medium box-medium-next">
-        <a href="xmpp.html"><img src="img/xmpp.png" alt="XMPP"/><br/><b>Coming soon</b></a>
+        <a href="http://code.google.com/p/kontalk/wiki/XMPP"><img src="img/xmpp.png" alt="XMPP"/><br/><b>Coming soon</b></a>
         </div>
 
     </div>
@@ -55,15 +55,15 @@
 <div class="page-footer">
     <div class="container-fluid pagination-centered">
 
-        <a href="about.html">About</a>
+        <a href="http://code.google.com/p/kontalk/wiki/About">About</a>
         |
-        <a href="files">Downloads</a>
+        <a href="http://code.google.com/p/kontalk/downloads">Downloads</a>
         |
-        <a href="protocol.html">Protocol specifications</a>
+        <a href="http://code.google.com/p/kontalk/wiki/Protocol">Protocol specifications</a>
         |
         <a href="http://www.kontalk.net/">Kontalk network</a>
         |
-        <a href="faq.html">FAQ</a>
+        <a href="http://code.google.com/p/kontalk/wiki/FAQ">FAQ</a>
 
     </div>
 </div>
