Addedd link to project page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         |
         <a href="http://code.google.com/p/kontalk/downloads">Downloads</a>
         |
+		<a href="https://code.google.com/p/kontalk/">Project Page</a>
+		|
         <a href="http://code.google.com/p/kontalk/wiki/Protocol">Protocol specifications</a>
         |
         <a href="http://www.kontalk.net/">Kontalk network</a>
