--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
 		<div class="container">
 			<div class="copyright eleven columns offset-by-one"><!-- Copyright -->
 				<h3>Kontalk</h3>
-				<p>Kontalk &copy; 2013. All rights reserved.
+				<p>Kontalk &copy; 2014. All rights reserved.
 			</div>
 			<div class="social four columns"><!-- Social Buttons -->
 				<ul>
 					<li class="border-5"><a href="https://www.facebook.com/kontalknet?ref=hl"><i class="fa fa-facebook"></i></a></li>
 					<li class="border-5"><a href="https://twitter.com/kontalknet"><i class="fa fa-twitter"></i></a></li>
 					<li class="border-5"><a href="https://plus.google.com/u/0/102201749813756709299/posts"><i class="fa fa-google-plus"></i></a></li>
-
+					<li class="border-5"><a href="https://github.com/orgs/kontalk/"><i class="fa fa-github"></i></a></li>
 				</ul>
 			</div>
 		</div>
