--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="box-medium box-medium-next">
-        <a href="http://code.google.com/p/kontalk/wiki/XMPP"><img src="img/xmpp.png" alt="XMPP"/><br/><b>Coming soon</b></a>
+        <a href="https://github.com/kontalk/specs/wiki/XMPP"><img src="img/xmpp.png" alt="XMPP"/><br/><b>Coming soon</b></a>
         </div>
 
     </div>
@@ -55,17 +55,15 @@
 <div class="page-footer">
     <div class="container-fluid pagination-centered">
 
-        <a href="http://code.google.com/p/kontalk/wiki/About">About</a>
+        <a href="https://github.com/kontalk/specs/wiki/About">About</a>
         |
-        <a href="http://code.google.com/p/kontalk/downloads">Downloads</a>
+        <a href="https://github.com/kontalk/specs/wiki/Mirrors">Downloads</a>
         |
-        <a href="https://code.google.com/p/kontalk/">Project Page</a>
-        |
-        <a href="http://code.google.com/p/kontalk/wiki/Protocol">Protocol specifications</a>
+        <a href="https://github.com/kontalk">Project Page</a>
         |
         <a href="http://www.kontalk.net/">Kontalk network</a>
         |
-        <a href="http://code.google.com/p/kontalk/wiki/FAQ">FAQ</a>
+        <a href="https://github.com/kontalk/specs/wiki/FAQ">FAQ</a>
 
     </div>
 </div>
