Added Button for alternative store and GitHub.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<!-- Primary Page Layout
 	================================================== -->
-		<header class="android"><!-- Header -->
+		<header class="android">
 			<div class="container">
 				<div class="logo eleven columns"><!-- Logo -->
 					<img src="images/android-app.png"/>
@@ -65,7 +65,7 @@
 					</a>
 				</div><!-- End Intro -->	
 			</div>
-		</header><!-- End Header -->
+		</header>
 		<section id="info"><!-- Info -->
 			<div class="container">
 				<div class="left eleven columns"><!-- Left -->
@@ -165,18 +165,48 @@
 			</div>		
 		</div>
 	</section><!-- End Testimonial -->
-	<!--<section id="video">
-		<div class="container">
-			<div class="iphone sixteen columns">
-				
+	<section id ="store">
+		<h2>ALTERNATIVE STORE</h2>
+		<div class="container">			
+			<div class="team-member five columns">
+				<div class="picture five columns">
+					<a href="https://f-droid.org/repository/browse/?fdfilter=kontalk&fdid=org.kontalk"><img src="images/fdroid.png"></a>
+				</div>
+			</div>
+			<div class="team-member five columns">
+				<div class="picture five columns">
+					<a href="http://kontalk-devteam.store.aptoide.com/app/org.kontalk/25/4227381"><img src="images/aptoide.png"></a>
+				</div>
+			</div>
+			<div class="team-member five columns">
+				<div class="picture five columns">
+					<a href="http://apps.opera.com/it_it/kontalk_messenger.html"><img src="images/opera.png"></a>
+				</div>
 			</div>
 		</div>
 	</section>
-	<section id="mail">
+	<section id="team">
 		<div class="container">
-			
+				<div class="team-member five columns">
+					<div class="picture five columns">
+					<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&repo=androidclient&type=watch&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
+					</iframe>
+					</div>
+				</div>
+				<div class="team-member five columns">
+					<div class="picture five columns">
+						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&repo=androidclient&type=fork&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
+						</iframe>
+					</div>
+				</div>
+				<div class="team-member five columns">
+					<div class="picture five columns">
+						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&type=follow&count=true&size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowTransparency="true">
+						</iframe>
+					</div>
+				</div>
 		</div>
-	</section>-->
+	</section>
 	<footer id="footer"><!-- Footer -->
 		<div class="container">
 			<div class="copyright eleven columns offset-by-one"><!-- Copyright -->
