--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>The Kontalk Messaging Project</title>
-	<meta name="description" content="A new way of communicating."/>
+	<title>Kontalk - Community-driven instant messaging network</title>
+	<meta name="description" content="Community-driven instant messaging network"/>
 	<meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>	
 	<meta name="author" content="Andrea Cappelli">
 
@@ -56,7 +56,6 @@
 					<h1>Kontalk</h1>
 				</div><!-- End Logo -->
 				<div class="intro-text eleven columns"><!-- Intro -->
-					<h2 class="white">THE KONTALK MESSAGGING PROJECT</h2>
 					<h3>A new way of communicating.</h3>
 					<a href="#">
 						<div>
