--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<div class="container">			
 			<div class="team-member five columns">
 				<div class="picture five columns">
-					<a href="https://f-droid.org/repository/browse/?fdfilter=kontalk&fdid=org.kontalk"><img src="images/fdroid.png"></a>
+					<a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
 				</div>
 			</div>
 			<div class="team-member five columns">
@@ -188,19 +188,19 @@
 		<div class="container">
 				<div class="team-member five columns">
 					<div class="picture five columns">
-					<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&repo=androidclient&type=watch&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
+					<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true&amp;size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
 					</iframe>
 					</div>
 				</div>
 				<div class="team-member five columns">
 					<div class="picture five columns">
-						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&repo=androidclient&type=fork&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
+						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
 						</iframe>
 					</div>
 				</div>
 				<div class="team-member five columns">
 					<div class="picture five columns">
-						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&type=follow&count=true&size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowTransparency="true">
+						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true&amp;size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowTransparency="true">
 						</iframe>
 					</div>
 				</div>
@@ -210,14 +210,14 @@
 		<div class="container">
 			<div class="copyright eleven columns offset-by-one"><!-- Copyright -->
 				<h3>Kontalk</h3>
-				<p>Kontalk &copy; 2014. All rights reserved.
+				<p>Kontalk devteam &copy; 2014. All rights reserved.
 			</div>
 			<div class="social four columns"><!-- Social Buttons -->
 				<ul>
-					<li class="border-5"><a href="https://www.facebook.com/kontalknet?ref=hl"><i class="fa fa-facebook"></i></a></li>
+					<li class="border-5"><a href="https://www.facebook.com/kontalknet"><i class="fa fa-facebook"></i></a></li>
 					<li class="border-5"><a href="https://twitter.com/kontalknet"><i class="fa fa-twitter"></i></a></li>
-					<li class="border-5"><a href="https://plus.google.com/u/0/102201749813756709299/posts"><i class="fa fa-google-plus"></i></a></li>
-					<li class="border-5"><a href="https://github.com/orgs/kontalk/"><i class="fa fa-github"></i></a></li>
+					<li class="border-5"><a href="https://plus.google.com/u/0/102201749813756709299"><i class="fa fa-google-plus"></i></a></li>
+					<li class="border-5"><a href="https://github.com/kontalk"><i class="fa fa-github"></i></a></li>
 				</ul>
 			</div>
 		</div>
