--- a/index.html
+++ b/index.html
@@ -70,31 +70,39 @@
 				<div class="left eleven columns"><!-- Left -->
 					<div class="info-box first-box ten columns"><!-- White Hover Box -->
 						<div class="icon two columns">
-							<!--<i class="fa fa-tablet fa-4x"></i>-->
+							<i class="fa fa-lock fa-4x"></i>
 						</div>
-						<div class="info seven columns padding-10">
-							<h3>SECURITY</h3>
-							<p>All data exchanged inside the Kontalk network is encrypted, and user IDs are always hashed, so that even the server owners cannot retrieve the phone number of a user.</p>
+						<div class="info eight columns padding-10">
+							<h3>Encrypted</h3>
+							<p><strong>Encrypted everywhere.</strong> Both client-to-server and server-to-server channels are fully encrypted. Users can be safe with <em>end-to-end</em> encryption &mdash; servers can't decrypt it.</p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
 					<div class="info-box second-box ten columns">
 						<div class="icon two columns">
-							<!--<i class="fa fa-users fa-4x"></i>-->
+							<i class="fa fa-users fa-4x"></i>
 						</div>
-						<div class="info seven columns padding-10">
-							<h3>USER FRIENDLY</h3>
-							<p>Fruitcake lemon drops macaroon tiramisu candy bonbon tootsie roll gingerbread cake. Topping soufflé cheesecake ice cream. Topping powder jelly beans toffee.</p>
+						<div class="info eight columns padding-10">
+							<h3>Distributed</h3>
+							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volounteers offering servers and splitting costs among them.</p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
 					<div class="info-box third-box ten columns">
 						<div class="icon two columns">
-							<!--<i class="fa fa-code fa-4x"></i>-->
+							<i class="fa fa-code fa-4x"></i>
 						</div>
-						<div class="info seven columns padding-10">
-							<h3>WELL CODED</h3>
-							<p>Fruitcake lemon drops macaroon tiramisu candy bonbon tootsie roll gingerbread cake. Topping soufflé cheesecake ice cream. Topping powder jelly beans toffee.</p>
+						<div class="info eight columns padding-10">
+							<h3>Open source</h3>
+							<p class="github">Every bit of the software used in the Kontalk network is completely open source. Hosted by Github.</p>
+							<p class="github-buttons">
+							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
+							</iframe>
+							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
+							</iframe>
+							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true" height="20" width="180" frameborder="0" scrolling="0" style="width:180px; height: 20px;" allowTransparency="true">
+							</iframe>
+							</p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
@@ -133,37 +141,6 @@
 			</div>
 		</div>
 	</section><!-- End Testimonials -->
-	<section id="team"><!-- Team -->
-		<div class="container">
-			<div class="team-member five columns"><!-- Team Member -->
-				<div class="picture five columns">
-					<img src="images/team/daniele.png">
-				</div>
-				<div class="description five columns">
-					<h3>Daniele Ricci</h3>
-					<p>Server and Android Developer</p>
-				</div>
-			</div>
-			<div class="team-member five columns"><!-- Team Member -->
-				<div class="picture five columns">
-					<img src="images/team/andrea.png">
-				</div>
-				<div class="description five columns">
-					<h3>Andrea Cappelli</h3>
-					<p>Android and Web Developer</p>
-				</div>
-			</div>
-			<div class="team-member five columns"><!-- Team Member -->
-				<div class="picture five columns">
-					<img src="images/team/giovanni.png">
-				</div>
-				<div class="description five columns">
-					<h3>Giovanni Lauricella</h3>
-					<p>Graphic Designer</p>
-				</div>
-			</div>		
-		</div>
-	</section><!-- End Testimonial -->
 	<section id ="store">
 		<div class="container">			
 			<div class="team-member five columns">
@@ -181,28 +158,6 @@
 					<a href="http://apps.opera.com/it_it/kontalk_messenger.html"><img src="images/opera.png"></a>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section id="team">
-		<div class="container">
-				<div class="team-member five columns">
-					<div class="picture five columns">
-					<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true&amp;size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
-					</iframe>
-					</div>
-				</div>
-				<div class="team-member five columns">
-					<div class="picture five columns">
-						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true">
-						</iframe>
-					</div>
-				</div>
-				<div class="team-member five columns">
-					<div class="picture five columns">
-						<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true&amp;size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowTransparency="true">
-						</iframe>
-					</div>
-				</div>
 		</div>
 	</section>
 	<footer id="footer"><!-- Footer -->
