--- a/index.html
+++ b/index.html
@@ -124,20 +124,33 @@
 		<div class="container">
 				<ul class="bxslider testimonialsslider">
 					<li>
-					
 					<div class="thirteen columns">
-						<h3>What is Kontalk</h3>	
-							<blockquote> 
-							Kontalk is an effort to write an instant messaging system - primarly designed for embedded devices, especially smartphones. Though currently there is only an Android Client, it aims to be cross-platform compatible. iOS, Symbian and even a desktop client will be developed (developers wanted!).
-							</blockquote> 
-					</div></li>
-					<li>
-					
-					<div class="thirteen columns">
-						<h3>Web of Trust</h3>
-						<blockquote>The Kontalk network of servers is public: anyone can join with their own server. A server is untrusted at the beginning. By means of a voting system - based on strong asymmetric encryption - and by working actively in the network, it can become a trusted server and get more privileges.</blockquote> 
+						<h3>Free. Forever.</h3>
+						    <blockquote>
+						    Kontalk relies on a distributed network of servers run by volounteers to provide a stable and secure service
+						    for all of Kontalk users. Because of that, Kontalk will always remain <strong>free</strong>.
+						    </blockquote>
 					</div>
 					</li>
+
+					<li>
+					<div class="thirteen columns">
+						<h3>Perfect for mobile phones.</h3>
+						    <blockquote>
+						    Kontalk uses your phone number to identify yourself among your contacts, without the need to remember user IDs or usernames.
+						    </blockquote>
+					</div>
+					</li>
+
+					<li>
+					<div class="thirteen columns">
+						<h3>Based on XMPP.</h3>
+						    <blockquote>
+						    Kontalk is based on <a href="https://github.com/kontalk/specs/wiki/XMPP">rock-solid Internet standards</a>, ensuring interoperability with other services.
+						    </blockquote>
+					</div>
+					</li>
+
 			</div>
 		</div>
 	</section><!-- End Testimonials -->
