Kontalk devteam author meta
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Kontalk - Community-driven instant messaging network</title>
 	<meta name="description" content="Community-driven instant messaging network"/>
 	<meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>	
-	<meta name="author" content="Andrea Cappelli">
+	<meta name="author" content="Kontalk devteam">
 
 	<!-- Mobile Specific Metas
   ================================================== -->
