Removed opera store
Signed-off-by: Andrea Cappelli <a.cappelli87@gmail.com>

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 
 					<li>
 					<div class="thirteen columns">
-						<h3>Based on XMPP.</h3>
+						<h3>* Based on XMPP.</h3>
 						    <blockquote>
-						    Kontalk is based on <a href="https://github.com/kontalk/specs/wiki/XMPP">rock-solid Internet standards</a>, ensuring interoperability with other services.
+						    Kontalk is based on <a href="https://github.com/kontalk/specs/wiki/XMPP">rock-solid Internet standards</a>, ensuring interoperability with other services. <br>* XMPP version is only available in beta.<br>
 						    </blockquote>
 					</div>
 					</li>
@@ -156,19 +156,14 @@
 	</section><!-- End Testimonials -->
 	<section id ="store">
 		<div class="container">			
-			<div class="team-member five columns">
-				<div class="picture five columns">
+			<div class="team-member eight columns">
+				<div class="picture eight columns">
 					<a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
 				</div>
 			</div>
-			<div class="team-member five columns">
-				<div class="picture five columns">
+			<div class="team-member eight columns">
+				<div class="picture eight columns">
 					<a href="http://kontalk-devteam.store.aptoide.com/app/org.kontalk/25/4227381"><img src="images/aptoide.png"></a>
-				</div>
-			</div>
-			<div class="team-member five columns">
-				<div class="picture five columns">
-					<a href="http://apps.opera.com/it_it/kontalk_messenger.html"><img src="images/opera.png"></a>
 				</div>
 			</div>
 		</div>
