--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</div>
 						<div class="info eight columns padding-10">
 							<h3>Distributed</h3>
-							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volounteers offering servers and splitting costs among them.</p>
+							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volunteers offering servers and splitting costs among them.</p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
@@ -127,7 +127,7 @@
 					<div class="thirteen columns">
 						<h3>Free. Forever.</h3>
 						    <blockquote>
-						    Kontalk relies on a distributed network of servers run by volounteers to provide a stable and secure service
+						    Kontalk relies on a distributed network of servers run by volunteers to provide a stable and secure service
 						    for all of Kontalk users. Because of that, Kontalk will always remain <strong>free</strong>.
 						    </blockquote>
 					</div>
