Style fix on XMPP footnote
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
 
 					<li>
 					<div class="thirteen columns">
-						<h3>* Based on XMPP.</h3>
+						<h3>Based on XMPP.</h3>
 						    <blockquote>
-						    Kontalk is based on <a href="https://github.com/kontalk/specs/wiki/XMPP">rock-solid Internet standards</a>, ensuring interoperability with other services. <br>* XMPP version is only available in beta.<br>
+						    Kontalk is based on <a href="https://github.com/kontalk/specs/wiki/XMPP">rock-solid Internet standards</a>, ensuring interoperability with other services.
+						    <p><sup>*</sup> XMPP version is only available in beta.</p>
 						    </blockquote>
 					</div>
 					</li>
