Fix some final stuff before release
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</div>
 						<div class="info eight columns padding-10">
 							<h3>Encrypted</h3>
-							<p><strong>Encrypted everywhere.</strong> Both client-to-server and server-to-server channels are fully encrypted. Users can be safe with <em>end-to-end</em> encryption &mdash; servers can't decrypt it.</p>
+							<p><strong>Encrypted everywhere.</strong> Both client-to-server and server-to-server channels are fully encrypted. Users can be safe with <a href="https://github.com/kontalk/specs/wiki/Encryption"><em>end-to-end</em> encryption</a> &mdash; servers can't decrypt it.</p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
@@ -84,7 +84,7 @@
 						</div>
 						<div class="info eight columns padding-10">
 							<h3>Distributed</h3>
-							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volunteers offering servers and splitting costs among them.</p>
+							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volunteers offering servers and splitting costs among them. <strong><a href="http://www.kontalk.net/">Go to the network web site &raquo;</a></strong></p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
@@ -94,7 +94,7 @@
 						</div>
 						<div class="info eight columns padding-10">
 							<h3>Open source</h3>
-							<p class="github">Every bit of the software used in the Kontalk network is completely open source. Hosted by Github.</p>
+							<p class="github">Every bit of the software used in the Kontalk network, both server and client, is completely open source. Hosted by Github.</p>
 							<p class="github-buttons">
 							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
 							</iframe>
@@ -127,7 +127,7 @@
 					<div class="thirteen columns">
 						<h3>Free. Forever.</h3>
 						    <blockquote>
-						    Kontalk relies on a distributed network of servers run by volunteers to provide a stable and secure service
+						    Kontalk relies on a <a href="https://github.com/kontalk/network/wiki">network of servers</a> run by volunteers to provide a stable and secure service
 						    for all of Kontalk users. Because of that, Kontalk will always remain <strong>free</strong>.
 						    </blockquote>
 					</div>
@@ -164,7 +164,7 @@
 			</div>
 			<div class="team-member eight columns">
 				<div class="picture eight columns">
-					<a href="http://kontalk-devteam.store.aptoide.com/app/org.kontalk/25/4227381"><img src="images/aptoide.png"></a>
+					<a href="http://kontalk-devteam.store.aptoide.com/app/market/org.kontalk/34/6938705/Kontalk%20Messenger"><img src="images/aptoide.png"></a>
 				</div>
 			</div>
 		</div>
@@ -173,7 +173,7 @@
 		<div class="container">
 			<div class="copyright eleven columns offset-by-one"><!-- Copyright -->
 				<h3>Kontalk</h3>
-				<p>Kontalk devteam &copy; 2014. All rights reserved.
+				<p>Kontalk devteam &copy; 2014.
 			</div>
 			<div class="social four columns"><!-- Social Buttons -->
 				<ul>
