--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.png">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/android-app-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/android-app.png">
 	<link rel="apple-touch-icon" sizes="96x96" href="images/android-app-icon-114x114.png">
