Fix show icons on side of the balloons (fix #6)
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="icon two columns">
 							<i class="fa fa-lock fa-4x"></i>
 						</div>
-						<div class="info eight columns padding-10">
+						<div class="info seven columns padding-10">
 							<h3>Encrypted</h3>
 							<p><strong>Encrypted everywhere.</strong> Both client-to-server and server-to-server channels are fully encrypted. Users can be safe with <a href="https://github.com/kontalk/specs/wiki/Encryption"><em>end-to-end</em> encryption</a> &mdash; servers can't decrypt it.</p>
 						</div>
@@ -82,7 +82,7 @@
 						<div class="icon two columns">
 							<i class="fa fa-users fa-4x"></i>
 						</div>
-						<div class="info eight columns padding-10">
+						<div class="info seven columns padding-10">
 							<h3>Distributed</h3>
 							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volunteers offering servers and splitting costs among them. <strong><a href="http://www.kontalk.net/">Go to the network web site &raquo;</a></strong></p>
 						</div>
@@ -92,7 +92,7 @@
 						<div class="icon two columns">
 							<i class="fa fa-code fa-4x"></i>
 						</div>
-						<div class="info eight columns padding-10">
+						<div class="info seven columns padding-10">
 							<h3>Open source</h3>
 							<p class="github">Every bit of the software used in the Kontalk network, both server and client, is completely open source. Hosted by Github.</p>
 							<p class="github-buttons">
