Move F-Droid logo to the top (close #11)
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<title>Kontalk - Community-driven instant messaging network</title>
 	<meta name="description" content="Community-driven instant messaging network"/>
-	<meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>	
+	<meta name="keywords" content="kontalk, smartphone, messaging, sms, instant messaging, decentralized network, free messaging network"/>
 	<meta name="author" content="Kontalk devteam">
 
 	<!-- Mobile Specific Metas
@@ -57,12 +57,11 @@
 				</div><!-- End Logo -->
 				<div class="intro-text eleven columns"><!-- Intro -->
 					<h3>A new way of communicating.</h3>
-					<a href="#">
-						<div>
-							<a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
-						</div>
-					</a>
-				</div><!-- End Intro -->	
+                                        <div>
+                                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
+                                                <a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
+                                        </div>
+				</div><!-- End Intro -->
 			</div>
 		</header>
 		<section id="info"><!-- Info -->
@@ -156,7 +155,7 @@
 		</div>
 	</section><!-- End Testimonials -->
 	<section id ="store">
-		<div class="container">			
+		<div class="container">
 			<div class="team-member eight columns">
 				<div class="picture eight columns">
 					<a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
