Put all three stores at the bottom
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -156,15 +156,14 @@
 	</section><!-- End Testimonials -->
 	<section id ="store">
 		<div class="container">
-			<div class="team-member eight columns">
-				<div class="picture eight columns">
-					<a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
-				</div>
+                        <div class="picture team-member five columns">
+                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
+                        </div>
+			<div class="picture team-member five columns">
+                                <a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
 			</div>
-			<div class="team-member eight columns">
-				<div class="picture eight columns">
-					<a href="http://kontalk-devteam.store.aptoide.com/app/market/org.kontalk/34/6938705/Kontalk%20Messenger"><img src="images/aptoide.png"></a>
-				</div>
+			<div class="picture team-member five columns">
+                                <a href="http://kontalk-devteam.store.aptoide.com/app/market/org.kontalk/34/6938705/Kontalk%20Messenger"><img src="images/aptoide.png"></a>
 			</div>
 		</div>
 	</section>
