added Link to help pages

--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 	<footer id="footer"><!-- Footer -->
 		<div class="container">
 			<div class="copyright eleven columns offset-by-one"><!-- Copyright -->
+				<p>Any questions? Please check out our	<a class=footerlink href="https://github.com/kontalk/androidclient/wiki" >help pages</a>.
+				<br>
 				<h3>Kontalk</h3>
 				<p>Kontalk devteam &copy; 2015.
 			</div>
