Some footer links
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -168,12 +168,15 @@
 	</section>
 	<footer id="footer"><!-- Footer -->
 		<div class="container">
-			<div class="copyright eleven columns offset-by-one"><!-- Copyright -->
-				<p>Any questions? Please check out our	<a class=footerlink href="https://github.com/kontalk/androidclient/wiki" >help pages</a>.
-				<br>
-				<h3>Kontalk</h3>
-				<p>Kontalk devteam &copy; 2015.
-			</div>
+                        <div class="copyright four columns offset-by-one"><!-- Title -->
+                            <h3>Kontalk</h3>
+                        </div>
+                        <div class="seven columns">
+                            <ul>
+                            <li><a class="footerlink" href="https://github.com/kontalk/androidclient/wiki">Help</a></li>
+                            <li><a class="footerlink" href="https://github.com/kontalk/network/wiki">The network</a></li>
+                            </ul>
+                        </div>
 			<div class="social four columns"><!-- Social Buttons -->
 				<ul>
 					<li class="border-5"><a href="https://www.facebook.com/kontalknet"><i class="fa fa-facebook"></i></a></li>
@@ -182,6 +185,11 @@
 					<li class="border-5"><a href="https://github.com/kontalk"><i class="fa fa-github"></i></a></li>
 				</ul>
 			</div>
+		</div>
+		<div class="container">
+                    <div class="eleven columns offset-by-one"><!-- Copyright -->
+                        <p>Kontalk devteam &copy; 2015</p>
+                    </div>
 		</div>
 	</footer><!-- End Footer -->
 
