--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						</div>
 						<div class="info seven columns padding-10">
 							<h3>Distributed</h3>
-							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volunteers offering servers and splitting costs among them. <strong><a href="http://www.kontalk.net/">Go to the network web site &raquo;</a></strong></p>
+							<p><strong>Run by the community for the community.</strong> Kontalk is run by a community of volunteers offering servers and splitting costs among them. <strong><a href="//www.kontalk.net/">Go to the network web site &raquo;</a></strong></p>
 						</div>
 						<div class="arrow border-5"></div>
 					</div>
@@ -95,11 +95,11 @@
 							<h3>Open source</h3>
 							<p class="github">Every bit of the software used in the Kontalk network, both server and client, is completely open source. Hosted by Github.</p>
 							<p class="github-buttons">
-							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
+							<iframe src="//ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
 							</iframe>
-							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
+							<iframe src="//ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
 							</iframe>
-							<iframe src="http://ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true" height="20" width="180" frameborder="0" scrolling="0" style="width:180px; height: 20px;" allowTransparency="true">
+							<iframe src="//ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true" height="20" width="180" frameborder="0" scrolling="0" style="width:180px; height: 20px;" allowTransparency="true">
 							</iframe>
 							</p>
 						</div>
