--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet" />
 
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
 	<!-- Favicons
@@ -40,7 +40,7 @@
 	<link rel="apple-touch-icon" href="images/android-app-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/android-app.png">
 	<link rel="apple-touch-icon" sizes="96x96" href="images/android-app-icon-114x114.png">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
