--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 					<div class="android-image">
 						<div class="slider-app">
 							<ul class="bxslider appslider">
-							    <li><img src="images/app/app1.jpg"></li>
-							    <li><img src="images/app/app2.jpg"></li>
-							    <li><img src="images/app/app3.jpg"></li>
+							    <li><img src="images/app/app1.png"></li>
+							    <li><img src="images/app/app2.png"></li>
+							    <li><img src="images/app/app3.png"></li>
 							</ul>
 						</div>
 					</div>
