--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                                                 <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
                                                 <a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
                                         </div>
+                                        <div>
+                                            <a href="https://github.com/kontalk/desktopclient-java/releases">&raquo; Desktop client</a>
+                                        </div>
 				</div><!-- End Intro -->
 			</div>
 		</header>
@@ -95,11 +98,11 @@
 							<h3>Open source</h3>
 							<p class="github">Every bit of the software used in the Kontalk network, both server and client, is completely open source. Hosted by Github.</p>
 							<p class="github-buttons">
-							<iframe src="//ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
+							<iframe src="https://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=watch&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
 							</iframe>
-							<iframe src="//ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
+							<iframe src="https://ghbtns.com/github-btn.html?user=kontalk&amp;repo=androidclient&amp;type=fork&amp;count=true" height="20" width="90" frameborder="0" scrolling="0" style="width:100px; height: 20px;" allowTransparency="true">
 							</iframe>
-							<iframe src="//ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true" height="20" width="180" frameborder="0" scrolling="0" style="width:180px; height: 20px;" allowTransparency="true">
+							<iframe src="https://ghbtns.com/github-btn.html?user=kontalk&amp;type=follow&amp;count=true" height="20" width="180" frameborder="0" scrolling="0" style="width:180px; height: 20px;" allowTransparency="true">
 							</iframe>
 							</p>
 						</div>
@@ -155,15 +158,17 @@
 	</section><!-- End Testimonials -->
 	<section id ="store">
 		<div class="container">
-                        <div class="picture team-member five columns">
+                        <div class="picture team-member seven columns">
                                 <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
                         </div>
-			<div class="picture team-member five columns">
+			<div class="picture team-member seven columns">
                                 <a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
 			</div>
+			<!--
 			<div class="picture team-member five columns">
                                 <a href="http://kontalk-devteam.store.aptoide.com/app/market/org.kontalk/34/6938705/Kontalk%20Messenger"><img src="images/aptoide.png"></a>
 			</div>
+			-->
 		</div>
 	</section>
 	<footer id="footer"><!-- Footer -->
