Update Google Play and F-Droid badges

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 				<div class="intro-text eleven columns"><!-- Intro -->
 					<h3>A new way of communicating.</h3>
                                         <div>
-                                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
-                                                <a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
+                                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png" height="80"></a>
+                                                <a href="https://f-droid.org/app/org.kontalk"><img src="images/fdroid.png" height="80"></a>
                                         </div>
                                         <div>
                                             <a href="https://github.com/kontalk/desktopclient-java/releases">&raquo; Desktop client</a>
@@ -159,10 +159,10 @@
 	<section id ="store">
 		<div class="container">
                         <div class="picture team-member seven columns">
-                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png"></a>
+                                <a href="https://play.google.com/store/apps/details?id=org.kontalk"><img src="images/google_play.png" height="80"></a>
                         </div>
 			<div class="picture team-member seven columns">
-                                <a href="https://f-droid.org/repository/browse/?fdid=org.kontalk"><img src="images/fdroid.png"></a>
+                                <a href="https://f-droid.org/app/org.kontalk"><img src="images/fdroid.png" height="80"></a>
 			</div>
 			<!--
 			<div class="picture team-member five columns">
