New link for "network"
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="seven columns">
                             <ul>
                             <li><a class="footerlink" href="https://github.com/kontalk/androidclient/wiki">Help</a></li>
-                            <li><a class="footerlink" href="https://github.com/kontalk/network/wiki">The network</a></li>
+                            <li><a class="footerlink" href="https://www.kontalk.net/">The network</a></li>
                             </ul>
                         </div>
 			<div class="social four columns"><!-- Social Buttons -->
